@@ -1,5 +1,7 @@
 2010-01-04  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
+	* library/fontchooser.tcl: [Bug 2727476] Fix default size of font
+	chooser dialog and assigned minimum sizes for the lists.
 	* library/console.tcl: [Bug 580361] Fix console <<Cut>> binding.
 	* library/console.tcl: Fix keyboard access to console menu.
 	* library/demos/filebox.tcl: Make prettier using ttk.
